Fixed hash jumping. Added smooth scrolling behavior.

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -124,3 +124,7 @@ input#playerName:focus {
 .no-scroll {
   overflow: hidden;
 }
+
+html {
+  scroll-behavior: smooth;
+}
